syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

import "google/protobuf/wrappers.proto";

message FlowSwitch {
	int32 FlowSwitchId = 1;

	bool Value = 2;
}

message EditableFlowSwitch {
	int32 FlowSwitchId = 1;

	google.protobuf.BoolValue Value = 2;
}